# chatcat

./: LICENSE  README.md  pyproject.toml
chatcat/: LICENSE  README.md  pyproject.toml
chatcat/src/chatcat/: cli.py
chatcat/tests/: test_core.py
src/chatcat/: __init__.py  core.py
tests/: test_core.py
