[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatcat"
version = "0.1.0"
description = "CLI tool to dump codebase files into LLM/chat-friendly text or markdown format."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
chatcat = "chatcat.cli:main"
